[package]
name = "commit_crafter"
version = "0.1.0"
edition = "2021"

description = "AI powered tool for Git commit message generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.12"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }