[package]
name = "commit_crafter"
version = "0.1.6"
edition = "2021"
authors = ["ZenYang <yzzting@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yzzting/commit_crafter"
repository = "https://github.com/yzzting/commit_crafter"
keywords = ["git", "commit-message", "ai", "nlp", "productivity"]
categories = ["development-tools", "text-processing", "command-line-utilities"]
description = "AI powered tool for Git commit message generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.12"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
tempfile = "3.10.1"